--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,43 @@
  *= require_tree .
  *= require_self
  */
+/* Add your styling for the login page here */
+
+/* .container {
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    background-color: #f0f0f0;
+    
+    width: 1200px;
+    padding: 50px;
+    margin: 20px;
+  }
+
+  .card {
+    max-width: 400px;
+    background-color: #ffffff; 
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
+    text-align: center;
+    padding: 20px;
+  }
+ 
+  .card img {
+    max-width:75%;
+    height: 75%;
+    margin-bottom: 20px;
+  }
+
+  .field {
+    margin-bottom: 10px;
+  }
+
+  .actions {
+    margin-top: 20px;
+  }
+
+  body {
+    background-color: aquamarine;
+  }
+   */
