--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -1,33 +1,59 @@
-.container{
-    /* background-color: yellow; */
-    display: flex;
-    max-height:max-content;
-}
-.left{
-    background-color: brown;
-    display: flex;
-    flex-grow: 3;
-    background-image: url(https://cdn.iris.nitk.ac.in/mb.jpg);
-    background-repeat: no-repeat;
-    height:45rem;
-    background-size: cover;
-}
 
-.right{
-    /* background-color: darkblue; */
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+}
+h1{
+    padding-top: 1em;
+}
+#container {
     display: flex;
-    padding-top: 10%;
-    flex-grow: 7;
+    min-height: 85vh;
+    flex-direction: row-reverse;
+    /* border: 2px solid grey;
+    background-color: #ffaf7f; */
     justify-content: center;
-}
-.cardy{
-    background-color: aliceblue;
-    transition: box-shadow .1s;
-    border: 1px solid #ccc;
-    background: #fff;
-    padding: 2%;
+    padding: 1em 3em;
+
 }
 
-.cardy:hover {
-    box-shadow: 0 0 11px rgba(33,33,33,.2); 
-  }
+.left {
+    width: 60%;
+    object-fit: cover;
+    display: flex;
+    align-items: center;
+    margin: 1em;
+}
+
+.left img {
+    border-radius: 20px;
+    width: 100%;
+}
+
+.parag{
+    text-align: center;
+    padding: 0 2em;
+    font-size: smaller;
+}
+
+.right {
+    /* background-color: aqua; */
+    display: flex;
+    width: 40%;
+    justify-content:space-between;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card-title{
+    text-align: center;
+}
+
+.forgot{
+    text-align: end;
+}
+
