--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,53 @@
 <%= stylesheet_link_tag 'login'%>
-<div class="container">
-<div class="left">
-</div>
-<div class="right">
-<div class="card" style="width: 18rem;">
-  <div class="card-body cardy">
-    <h2 class="card-title">Sign In</h2>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-    
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div>
-      <div class="field">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
-    
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
-    
-      <div class="actions">
-        <%= f.submit "Sign up" %>
-      </div>
-    <% end %>
-    <%= render "devise/shared/links" %>
-  </div>
-</div>
 
-</div>
-</div>
+<h1 class="fw-bold text-center mt-3" >MaiBlog</h1>
+
+
+<div id="container">
+
+  <div class="left">
+    <%= image_tag "cover.jpg" %>
+  </div>
+
+  <div class="right">
+    <div class="text-center px-5 pt-3">
+    </div>
+     <div class="card" id ="cardu" style="width: 28rem;">
+        <div  class="card-body cardy">
+          <h2 class="card-title fw-bold">Sign Up</h2>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="field">
+              <%= f.label :email ,for:"email", class:"form-label" %><br />
+              <%= f.email_field :email, autofocus: true, autocomplete: "email" ,class:"form-control" ,id:"email", placeholder:"Enter your email" %>
+            </div>
+            <div class="field mt-3">
+              <%= f.label :password , for:"password", class:"form-label" %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "new-password" ,class:"form-control", id:"password",placeholder:"Enter your new password"  %>
+           </div>
+    
+           <div class="field">
+            <%= f.label :password_confirmation ,for:"password", class:"form-label" %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password"  ,class:"form-control", id:"password",placeholder:"Confirm your new password"%>
+           </div>
+    
+           <div class="d-grid gap-2 mt-3">
+             <%= f.submit "Sign up" ,class:"btn btn-primary" %>
+           </div>
+          <% end %>
+     </div>
+
+    </div>
+    
+  <div>
+ <hr>
+  <div class="mb-5 no-gutters">
+    <p><%= link_to "Forgot your password?", new_password_path(resource_name) %></p>
+    <p>Have an account? <%= link_to "Log in", new_session_path(resource_name) %></p>
+  </div>
+
 
 
