--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Home#index</h1>
 <a href = "/users/sign_out"> Sign Out </a>
+<%=image_tag  @user.profile,height:"500"%>
+  
+
+
 <p>Find me in app/views/home/index.html.erb</p>
