--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,4 @@
-<p style="color: green"><%= notice %></p>
-
+<%= render 'home/navbar'%>
 <h1>Blogs</h1>
 
 <div id="blogs">
@@ -11,4 +10,4 @@
   <% end %>
 </div>
 
-<%= link_to "New blog", new_blog_path %>
+
