--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Home#index</h1>
 <a href = "/users/sign_out"> Sign Out </a>
-<%=image_tag  @user.profile,height:"500"%>
+ <%
+=begin%>
+ <%=image_tag  @user.profile,height:"500"%> 
+<%
+=end%>
   
 
 
