--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -6,6 +6,9 @@
          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       </form>
     </div>
+        <div>
+          <a class="nav-link" href="/users/sign_out">Sign Out</a>
+        </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
