--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -35,7 +35,7 @@
             <%= f.password_field :password_confirmation, autocomplete: "new-password"  ,class:"form-control", id:"password",placeholder:"Confirm your new password"%>
            </div>
 
-           <div class="field">
+           <div class="field mt-3">
             <%= f.label :profile %>
             <%= f.file_field :profile %>
           </div>
