--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,9 +1,15 @@
-<h1>New blog</h1>
+<%= render 'home/navbar'%>
+<%= stylesheet_link_tag 'newblog' %>
 
-<%= render "form", blog: @blog %>
+<div class=containers>
+   <h1 class="fw-bold text-center mt-1">New blog</h1>
 
-<br>
+   <%= render "form", blog: @blog %>
 
-<div>
-  <%= link_to "Back to blogs", blogs_path %>
+   <br>
+
+   <div class="d-grid gap-2 d-md-block">
+     <%= link_to "Back to blogs", blogs_path ,class:"btn btn-primary" %>
+   </div>
 </div>
+
