--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
            </div>
           
     
-           <div class="field">
+           <div class="field mt-3">
             <%= f.label :password_confirmation ,for:"password", class:"form-label" %><br />
             <%= f.password_field :password_confirmation, autocomplete: "new-password"  ,class:"form-control", id:"password",placeholder:"Confirm your new password"%>
            </div>
