--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -24,7 +24,7 @@
       <div class="dropstart">
         <ul class="dropdown-menu">
            <li><a class="dropdown-item" href="/users/sign_out">Sign Out</a></li>
-          <li><a class="dropdown-item" href="#">Action two</a></li>
+          <li><a class="dropdown-item" href="/users/edit">Edit My Account</a></li>
           <li><a class="dropdown-item" href="#">Action three</a></li>
         </ul>
      </div>
