--- a/app/assets/stylesheets/editacc.css
+++ b/app/assets/stylesheets/editacc.css
@@ -2,27 +2,33 @@
     padding: 0;
     margin: 0;
 }
+
+/* .containers{
+    width: 100%;
+    height: 300px;
+} */
+
+.back{
+    padding-left: 1em;
+}
 .edit{
     /* background-color: bisque; */
     width:100%;
     padding-left: 25%;
     padding-right: 25%;
-    min-height: 100vh;
+    min-height: 1000vh;
 }
 
-.actions{
-    /* display: flex;
+.click{
+    display: flex;
     justify-content: center;
-    text-align: center; */
+}
+.actions{
     width: 10em;
-    position: relative;
-    left: 40%;
-    right: 40%;
+    border-radius: 0.75em;
+
 }
-.cancel{
-    /* display: flex;
-    justify-content: flex-start; */
-}
-#svgLinkContainer{
-    transform:scale(2.5)
+.back{
+    width:10em;
+ 
 }
