--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,64 +1,21 @@
-<p style="color: green"><%= notice %></p>
+<%= stylesheet_link_tag 'home' %>
+
 
 <h1>Blogs</h1>
 <div id="cont" style="height:50rem;">
-  <div class="card mb-3" style="max-width: 1000px; height: 200px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
+  <div class="card" style="max-width: 900px; height: 200px; display:flex; flex-direction:row;">
+          <div class="leftct" style="display: flex; justify-content: center;">
+            <div class="titl">hgfkbkgfb</div>
+            <div class="content">Your content goes here</div>
+            <div class="downbar"></div>
+          </div>
+        <div class="rightct" style="width: 200px; text-align: center;">
+          <%= image_tag 'cover', width: 180, height: 180%>
+        </div>
+ 
   </div>
 </div>
-  <div class="card mb-3" style="max-width: 1000px; height: 200px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
-</div>
-  <div class="card mb-3" style="max-width: 1000px; height: 200px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
-</div>
-  <div class="card mb-3" style="max-width: 1000px; height: 200px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
+ 
 <div id="blogs">
   <% @blogs.each do |blog| %>
     <%= render blog %>
