--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,16 +1,18 @@
 <p style="color: green"><%= notice %></p>
-
 <%= render @blog %>
-
-<div>
-  <p id="like-count-<%= @blog.id %>">
-  <%= link_to "Dislike", dislike_blog_path(@blog), method: :get, remote: true, class: "dislike-button", data: { blog_id: @blog.id } %>
-
-  <strong>Likes:</strong> <%= @blog.likes %>
-  </p>
-  <%= link_to "Like", like_blog_path(@blog), method: :get, remote: true, class: "like-button", data: { blog_id: @blog.id } %>
-  <%= link_to "Edit this blog", edit_blog_path(@blog) %> |
-  <%= link_to "Back to blogs", blogs_path %>
-
-  <%= button_to "Destroy this blog", @blog, method: :delete %>
+<div id="like-buttons">
+  <% if @blog.liked_by?(current_user) %>
+    <%= link_to 'Unlike', blog_unlike_path(@blog), remote: true, method: :delete, class: 'btn btn-danger' %>
+  <% else %>
+    <%= link_to 'Like', blog_like_path(@blog), remote: true, method: :post, class: 'btn btn-primary' %>
+  <% end %>
 </div>
+<div id="like-count">
+  <%= @blog.likes_count %> Likes
+</div>
+<div>
+  <strong>Likes:</strong>
+</div>
+<%= link_to "Edit this blog", edit_blog_path(@blog) %> |
+<%= link_to "Back to blogs", blogs_path %>
+<%= button_to "Destroy this blog", @blog, method: :delete %>
