--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class=" contents form-floating">
-    <%= form.label :content, style: "display: block" ,for:"floatingTextarea2" %>
-    <%= form.text_area :content ,class:"form-control", placeholder:"Tell your story" , id:"floatingTextarea2" ,style:"height: 100vh" %>
+    <%= form.label :content, style: "display: block" ,for:"floatingTextarea2" %><br/><br/>
+    <%= form.text_area :content ,class:"form-control", placeholder:"Tell your story" , id:"floatingTextarea2" ,style:"height: 50vh" %>
   </div>
 
   <div class="input-group mb-3 mt-3">
