--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,8 +1,8 @@
 <%= render 'home/navbar'%>
 <%= stylesheet_link_tag 'newblog' %>
 
-<div class=containers>
-   <h1 class="fw-bold text-center mt-1">New blog</h1>
+<div class="containers">
+   <h1 class="fw-bold text-center">New blog</h1>
 
    <%= render "form", blog: @blog %>
 
